--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -662,3 +662,80 @@
   font-weight: 800;
   font-style: normal;
 }
+@font-face {
+  font-family: Airglyphs;
+  src: url('fonts/7eaac6dc349a7a322d360d83a610ef8e.woff') format('woff'),
+    url('fonts/682f10d89b5b829712c40e3d4d317613.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/c6f194eb479dbe0e8427a563322a0d15.woff2') format('woff2'),
+    url('fonts/e2ff0456e84ba1e39f958984940a063a.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/6af0a7a32757a6ba21f22b63e902295e.woff2') format('woff2'),
+    url('fonts/710e27d6c4c835f332a16866140f23fb.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/bf207abd70b7f1d8ac412ea6d7c66c89.woff2') format('woff2'),
+    url('fonts/4d6f80c6dadaa7d5d2455fc7ab2bec5d.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/659493f6b2a4e7c8f4b50f6f90da7077.woff2') format('woff2'),
+    url('fonts/e51740bfec2e960a5d37641775039ddb.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/659493f6b2a4e7c8f4b50f6f90da7077.woff2') format('woff2'),
+    url('fonts/e51740bfec2e960a5d37641775039ddb.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  unicode-range: U+F0000-FFFFD;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 400;
+}
+@font-face {
+  font-family: Circular;
+  unicode-range: U+F0000-FFFFD;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 700;
+}
+@font-face {
+  font-family: Circular;
+  unicode-range: U+F0000-FFFFD;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 300;
+}
+@font-face {
+  font-family: Circular;
+  unicode-range: U+F0000-FFFFD;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 200;
+}
+@font-face {
+  font-family: Airmoji_Standalone;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
