--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -662,8 +662,87 @@
   font-weight: 800;
   font-style: normal;
 }
+@font-face {
+  font-family: Airglyphs;
+  src: url('fonts/7eaac6dc349a7a322d360d83a610ef8e.woff') format('woff'),
+    url('fonts/682f10d89b5b829712c40e3d4d317613.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/c6f194eb479dbe0e8427a563322a0d15.woff2') format('woff2'),
+    url('fonts/e2ff0456e84ba1e39f958984940a063a.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/6af0a7a32757a6ba21f22b63e902295e.woff2') format('woff2'),
+    url('fonts/710e27d6c4c835f332a16866140f23fb.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/bf207abd70b7f1d8ac412ea6d7c66c89.woff2') format('woff2'),
+    url('fonts/4d6f80c6dadaa7d5d2455fc7ab2bec5d.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/659493f6b2a4e7c8f4b50f6f90da7077.woff2') format('woff2'),
+    url('fonts/e51740bfec2e960a5d37641775039ddb.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  src: url('fonts/659493f6b2a4e7c8f4b50f6f90da7077.woff2') format('woff2'),
+    url('fonts/e51740bfec2e960a5d37641775039ddb.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: Circular;
+  unicode-range: U+F0000-FFFFD;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 400;
+}
+@font-face {
+  font-family: Circular;
+  unicode-range: U+F0000-FFFFD;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 700;
+}
+@font-face {
+  font-family: Circular;
+  unicode-range: U+F0000-FFFFD;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 300;
+}
+@font-face {
+  font-family: Circular;
+  unicode-range: U+F0000-FFFFD;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 200;
+}
+@font-face {
+  font-family: Airmoji_Standalone;
+  src: url('fonts/be35ac7d320ee77dec26d18478a6beaa.woff2') format('woff2'),
+    url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
 
-/* Animations */
+/*! ----------------------- */
+/*! CSS animations          */
+/*! ----------------------- */
 @keyframes keyframe_127wuha {
   from {
     opacity: 0;
@@ -2331,7 +2410,22 @@
   }
 }
 
-/* /Animations */
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 /* Root */
 :root {
@@ -4181,6 +4275,120 @@ select[disabled] {
 input[disabled][type='checkbox'],
 select[disabled] {
   pointer-events: none;
+}
+input {
+  font-weight: inherit;
+}
+body {
+  background-color: transparent;
+  padding-bottom: 2px;
+}
+html {
+  font-family: sans-serif;
+  text-size-adjust: 100%;
+}
+body {
+  margin: 0;
+}
+img {
+  border: 0;
+}
+svg:not(:root) {
+  overflow: hidden;
+}
+input {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0;
+  line-height: normal;
+}
+@media print {
+  * {
+    color: #000 !important;
+    background: 0 0 !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
+  img {
+    break-inside: avoid;
+    max-width: 100% !important;
+  }
+  @page {
+    margin: 2cm 0.5cm;
+  }
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+html {
+  -webkit-tap-highlight-color: transparent;
+}
+body {
+  font-family: Circular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.43;
+  color: #565a5c;
+  background-color: #f5f5f5;
+  -webkit-font-smoothing: antialiased;
+}
+input {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  -webkit-font-smoothing: antialiased;
+}
+img {
+  vertical-align: middle;
+}
+input,
+label {
+  line-height: normal;
+}
+[type='number'],
+[type='text'] {
+  border: 1px solid #c4c4c4;
+  border-radius: 2px;
+  background-color: #fff;
+  color: #565a5c;
+}
+input {
+  font-family: Circular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+input::-webkit-input-placeholder {
+  color: #82888a;
+}
+[type='number'],
+[type='text'] {
+  transition: border-color 0.2s;
+}
+[type='number']:focus,
+[type='text']:focus {
+  border-color: #aaa;
+}
+.invalid[type='number'],
+.invalid[type='text'],
+[type='number']:invalid,
+[type='text']:invalid {
+  border-color: #ffb400;
+  background-color: #fff8e6;
+}
+[type='number'],
+[type='text'] {
+  display: block;
+  padding: 8px 10px;
+  width: 100%;
+}
+label {
+  display: block;
+  padding-top: 9px;
+  padding-bottom: 8px;
+}
+@media (max-width: 767px) {
+  input[type='text'] {
+    font-size: 16px;
+  }
 }
 
 /*! ------------------- */
