--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1423,3 +1423,117 @@ input[disabled][type='checkbox'],
 select[disabled] {
   pointer-events: none;
 }
+input {
+  font-weight: inherit;
+}
+body {
+  background-color: transparent;
+  padding-bottom: 2px;
+}
+html {
+  font-family: sans-serif;
+  text-size-adjust: 100%;
+}
+body {
+  margin: 0;
+}
+img {
+  border: 0;
+}
+svg:not(:root) {
+  overflow: hidden;
+}
+input {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0;
+  line-height: normal;
+}
+@media print {
+  * {
+    color: #000 !important;
+    background: 0 0 !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
+  img {
+    break-inside: avoid;
+    max-width: 100% !important;
+  }
+  @page {
+    margin: 2cm 0.5cm;
+  }
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+html {
+  -webkit-tap-highlight-color: transparent;
+}
+body {
+  font-family: Circular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.43;
+  color: #565a5c;
+  background-color: #f5f5f5;
+  -webkit-font-smoothing: antialiased;
+}
+input {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  -webkit-font-smoothing: antialiased;
+}
+img {
+  vertical-align: middle;
+}
+input,
+label {
+  line-height: normal;
+}
+[type='number'],
+[type='text'] {
+  border: 1px solid #c4c4c4;
+  border-radius: 2px;
+  background-color: #fff;
+  color: #565a5c;
+}
+input {
+  font-family: Circular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+input::-webkit-input-placeholder {
+  color: #82888a;
+}
+[type='number'],
+[type='text'] {
+  transition: border-color 0.2s;
+}
+[type='number']:focus,
+[type='text']:focus {
+  border-color: #aaa;
+}
+.invalid[type='number'],
+.invalid[type='text'],
+[type='number']:invalid,
+[type='text']:invalid {
+  border-color: #ffb400;
+  background-color: #fff8e6;
+}
+[type='number'],
+[type='text'] {
+  display: block;
+  padding: 8px 10px;
+  width: 100%;
+}
+label {
+  display: block;
+  padding-top: 9px;
+  padding-bottom: 8px;
+}
+@media (max-width: 767px) {
+  input[type='text'] {
+    font-size: 16px;
+  }
+}
