--- a/src/css/components/cards/card-alt-1.css
+++ b/src/css/components/cards/card-alt-1.css
@@ -1,4 +1,6 @@
-/* Card Alt 1 */
+/*! ---------- */
+/*! Card Alt 1 */
+/*! ---------- */
 @keyframes fade-in-card-alt-1__nav-btn-wrapper {
   from {
     opacity: 0;
@@ -339,4 +341,3 @@
 .dir.card-alt-1__btn-save[class][class]:disabled {
   cursor: not-allowed;
 }
-/* /Card Alt 1 */
