--- a/src/css/components/cards/card-alt-3.css
+++ b/src/css/components/cards/card-alt-3.css
@@ -1,4 +1,6 @@
-/* Card Alt 3 */
+/*! ----------- */
+/*! Card Alt 3  */
+/*! ----------- */
 .card-alt-3 {
   background: 0 0 !important;
   border: none !important;
@@ -56,4 +58,3 @@
     padding: 0 20px !important;
   }
 }
-/* /Card Alt 3 */
