--- a/src/css/components/cards/card-basic.css
+++ b/src/css/components/cards/card-basic.css
@@ -1,4 +1,6 @@
-/* Card Basic */
+/*! ----------- */
+/*! Card Basic  */
+/*! ----------- */
 .card-basic__title[class][class] {
   color: var(--gray-900);
   font-size: var(--font-size-md);
@@ -45,4 +47,3 @@
     transition: none;
   }
 }
-/* /Card Basic */
