--- a/src/css/components/cards/card-horizontal-outlined.css
+++ b/src/css/components/cards/card-horizontal-outlined.css
@@ -1,4 +1,6 @@
-/* Card Horizontal Outlined */
+/*! ------------------------- */
+/*! Card Horizontal Outlined  */
+/*! ------------------------- */
 .card-horizontal-outlined__time-list[class][class] {
   scrollbar-width: none;
   display: flex;
@@ -93,4 +95,3 @@
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
 }
-/* /Card Horizontal Outlined */
