--- a/src/css/components/cards/card-alt-2.css
+++ b/src/css/components/cards/card-alt-2.css
@@ -1,4 +1,6 @@
-/* Card Alt 2*/
+/*! ----------- */
+/*! Card Alt 2  */
+/*! ----------- */
 .card-alt-2__img-wrapper {
   position: absolute !important;
   inset: 0 !important;
@@ -112,4 +114,3 @@
   line-height: 1.28571em !important;
   color: #484848 !important;
 }
-/* /Card Alt 2*/
