--- a/src/css/components/cards/card-alt-4.css
+++ b/src/css/components/cards/card-alt-4.css
@@ -1,4 +1,6 @@
-/* Card Alt 4 */
+/*! ----------- */
+/*! Card Alt 4  */
+/*! ----------- */
 .card-alt-4__ratings[class][class] {
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
@@ -637,4 +639,3 @@
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
 }
-/* /Card Alt 4 */
