--- a/src/css/components/cards/card-alt-5.css
+++ b/src/css/components/cards/card-alt-5.css
@@ -1,4 +1,6 @@
-/* Card Alt 5 */
+/*! ----------- */
+/*! Card Alt 5  */
+/*! ----------- */
 .card-alt-5__subtitle {
   text-transform: uppercase !important;
   font-size: 12px !important;
@@ -38,4 +40,3 @@
   line-height: 40px !important;
   text-shadow: 0 0 60px rgba(0, 0, 0, 0.4) !important;
 }
-/* /Card Alt 5 */
