--- a/src/css/components/cards/card-horizontal-basic.css
+++ b/src/css/components/cards/card-horizontal-basic.css
@@ -1,4 +1,6 @@
-/* Card Horizontal Basic */
+/*! --------------------- */
+/*! Card Horizontal Basic */
+/*! --------------------- */
 .card-horizontal-basic {
   -webkit-box-align: center !important;
   font-size: 16px !important;
@@ -56,4 +58,3 @@
 .card-horizontal-basic__text:last-child {
   padding-bottom: 0 !important;
 }
-/* /Card Horizontal Basic */
