--- a/src/css/components/alert.css
+++ b/src/css/components/alert.css
@@ -1,4 +1,6 @@
-/* Alert */
+/*! --------------- */
+/*! Alert component */
+/*! --------------- */
 .alert .btn-primary {
   border-color: #007a87;
   background-color: #007a87;
@@ -92,4 +94,3 @@
     vertical-align: baseline;
   }
 }
-/* /Alert */
