--- a/src/css/components/calendar.css
+++ b/src/css/components/calendar.css
@@ -1,6 +1,6 @@
-/*! ------------------- */
-/*! Calendar component  */
-/*! ------------------- */
+/*! ------------------ */
+/*! Calendar component */
+/*! ------------------ */
 .calendar__next-month {
   display: inline-block !important;
   vertical-align: top !important;
