--- a/src/css/components/cards/card-banner.css
+++ b/src/css/components/cards/card-banner.css
@@ -1,6 +1,6 @@
-/*! ------------ */
-/*! Card Banner  */
-/*! ------------ */
+/*! ----------- */
+/*! Card Banner */
+/*! ----------- */
 .card-banner__container {
   display: block !important;
   border-radius: 12px !important;
