--- a/src/css/components/explore-filter-menu.css
+++ b/src/css/components/explore-filter-menu.css
@@ -1,4 +1,6 @@
-/* Explore Filter Menu */
+/*! ------------------- */
+/*! Explore Filter Menu */
+/*! ------------------- */
 @media (min-width: 744px) {
   .explore-filter-menu__body {
     min-width: 400px !important;
@@ -353,4 +355,3 @@
   font-size: 16px !important;
   line-height: 20px !important;
 }
-/* /Explore Filter Menu */
