--- a/src/css/components/explore-filter.css
+++ b/src/css/components/explore-filter.css
@@ -1,4 +1,6 @@
-/* Explore Filter */
+/*! -------------- */
+/*! Explore Filter */
+/*! -------------- */
 .explore-filter__icon {
   -ms-grid-row-align: center !important;
   -ms-flex-item-align: center !important;
@@ -215,4 +217,3 @@
   font-size: 14px !important;
   line-height: 18px !important;
 }
-/* /Explore Filter */
