--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -1,6 +1,6 @@
-/*! ----------------------- */
-/*! Button components       */
-/*! ----------------------- */
+/*! ----------------- */
+/*! Button components */
+/*! ----------------- */
 .btn-primary:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
