--- a/src/css/components/cards/card-alt-2.css
+++ b/src/css/components/cards/card-alt-2.css
@@ -1,6 +1,6 @@
-/*! ----------- */
-/*! Card Alt 2  */
-/*! ----------- */
+/*! ---------- */
+/*! Card Alt 2 */
+/*! ---------- */
 .card-alt-2__img-wrapper {
   position: absolute !important;
   inset: 0 !important;
