--- a/src/css/components/cards/card-alt-3.css
+++ b/src/css/components/cards/card-alt-3.css
@@ -1,6 +1,6 @@
-/*! ----------- */
-/*! Card Alt 3  */
-/*! ----------- */
+/*! ---------- */
+/*! Card Alt 3 */
+/*! ---------- */
 .card-alt-3 {
   background: 0 0 !important;
   border: none !important;
