--- a/src/css/components/cards/card-alt-5.css
+++ b/src/css/components/cards/card-alt-5.css
@@ -1,6 +1,6 @@
-/*! ----------- */
-/*! Card Alt 5  */
-/*! ----------- */
+/*! ---------- */
+/*! Card Alt 5 */
+/*! ---------- */
 .card-alt-5__subtitle {
   text-transform: uppercase !important;
   font-size: 12px !important;
