--- a/src/css/components/forms.css
+++ b/src/css/components/forms.css
@@ -1,6 +1,6 @@
-/*! ------------------- */
-/*! Form components     */
-/*! ------------------- */
+/*! --------------- */
+/*! Form components */
+/*! --------------- */
 .form__switch-secondary {
   appearance: none !important;
   height: 32px !important;
